syntax = "proto3";

package ra2yrproto;

import "google/protobuf/any.proto";
